# BrainEngine_SDL3

./: .clang-format  CMakeLists.txt  CMakePresets.json  vcpkg.json
.backup/: CMakeLists.txt
.cache/clangd/index/: AppLayer.cpp.C219031F15389DCE.idx  AppLayer.cpp.F50374EAB6E4400B.idx  AppLayer.h.0487D2627E910536.idx  AppLayer.h.F0B1532C0F5DAA07.idx  Application.cpp.060C9041853F0B42.idx  Application.h.2276B5188262769A.idx  Device.cpp.23BC0BC9812E1029.idx  Device.h.11AA231A53FDB1D4.idx  Layer.cpp.15B2BB963C631761.idx  Layer.h.2362543510AE432D.idx  Renderer.h.158E864F0FA2CD8A.idx  Shader.h.A48A833666A25E04.idx  Timestep.h.F85300B278C2CF64.idx  Window.cpp.AEE3CCC56185FA7D.idx  Window.h.D2A44C5CD90175AA.idx  application.cpp.50581C735A2ABE70.idx  application.h.2583C6367E9E9835.idx  imgui_impl_glfw.cpp.0E8B0F26D98C6C5B.idx  imgui_impl_glfw.cpp.526088F6C249693F.idx  imgui_impl_glfw.cpp.8CDE0049827C0D02.idx  imgui_impl_glfw.h.2E9DC874C5E7C81F.idx  imgui_impl_glfw.h.96BA8779118B1AA4.idx  imgui_impl_glfw.h.C593681C812BEECA.idx  imgui_impl_opengl3.cpp.611624A7D16B3B17.idx  imgui_impl_opengl3.cpp.CC4836423E3507AF.idx  imgui_impl_opengl3.cpp.D0D6C4703760FA1C.idx  imgui_impl_opengl3.h.21E68F417A6220FC.idx  imgui_impl_opengl3.h.33ADABFC45689049.idx  imgui_impl_opengl3.h.9625F4D8A69E492E.idx  imgui_impl_opengl3_loader.h.1C5E205534076FAD.idx  imgui_impl_opengl3_loader.h.59ECAC65767BEAD3.idx  imgui_impl_opengl3_loader.h.63F2A528D44A22F2.idx  main.cpp.23AF564223D7E960.idx  main.cpp.BC76B73242B7501F.idx  main.cpp.E364653A16C32DF0.idx
App/: CMakeLists.txt
App/Src/: AppLayer.cpp  AppLayer.h  main.cpp
Engine/: CMakeLists.txt
Engine/Core/: Application.cpp  Application.h  Device.cpp  Device.h  Layer.cpp  Layer.h  Timestep.h  Window.cpp  Window.h
src/: main.cpp
src/core/: application.cpp  application.h
